# Homework_10.1

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  test.log.txt  test.log_error.txt
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_units.py  test_widget.py
