[tool.poetry]
name = "dz"
version = "0.1.0"
description = ""
authors = ["Anton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
line_lenght = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
#Максимальная длинна строки
line-lenght = 119
#Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs        #Исключить несколько общих каталогов
    | \.git         #В корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''